--- a/Misvik_Bayeas_model/MISVIK_Finish/Raport/TODO
+++ b/Misvik_Bayeas_model/MISVIK_Finish/Raport/TODO
@@ -1,13 +1,12 @@
 # NOTE: Lista rzeczy do zrobienia: ✓/✗
 # _____________________________________________
 # 1. Sprawdzic poprawnosc danych              ✓
-# 2. Sprawdzic Prawdopodobienstwa             ✗
+# 2. Sprawdzic Prawdopodobienstwa             ✓
 # 3. Rozwinac opis Bayes Classificator        ✗
 # 4. Opis modelowania                         ✗
-# 5. Sprawdzic nazwy deskryptorow             ✗
+# 5. Sprawdzic nazwy deskryptorow             ✓
 # 6. Ujednolicic nazwy deskryptorow
 #    w Danych oraz Probability                ✗
-# 7. Poprawic nazwy testow (DNA i OX)
 
 
 #TODO: 1. CHECK POPRAWNOSC DANYCH             ✓
