Remove TODO from repo

--- a/Misvik_Bayeas_model/MISVIK_Finish/Raport/TODO
+++ b/Misvik_Bayeas_model/MISVIK_Finish/Raport/TODO
@@ -2,7 +2,7 @@
 # _____________________________________________
 # 1. Sprawdzic poprawnosc danych              ✓
 # 2. Sprawdzic Prawdopodobienstwa             ✓
-# 3. Rozwinac opis Bayes Classificator        ✗
+# 3. Rozwinac opis Bayes Classificator        ✗?
 # 4. Opis modelowania                         ✗
 # 5. Sprawdzic nazwy deskryptorow             ✓
 # 6. Ujednolicic nazwy deskryptorow
