--- a/Adsorption_Model/Model1/adsorption_model.ipynb
+++ b/Adsorption_Model/Model1/adsorption_model.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(\"./FiltredModels/filtred_mean_vertical.txt\")\n",
+    "file = open(\"./FiltredModels/filtred.txt\")\n",
     "x_file_name = \"./Data/My_Selected_X_srednia_vertical.xlsx\""
    ]
   },
@@ -788,7 +788,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w6/mcqdxvns5bj_x9g4q0fy_wqr0000gn/T/ipykernel_81641/908903029.py:5: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "/var/folders/w6/mcqdxvns5bj_x9g4q0fy_wqr0000gn/T/ipykernel_10768/908903029.py:5: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn-white')\n"
      ]
     },
