--- a/Adsorption_Model/Model1/adsorption_model.ipynb
+++ b/Adsorption_Model/Model1/adsorption_model.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "446e4907",
    "metadata": {},
    "outputs": [
@@ -115,6 +115,10 @@
      "output_type": "stream",
      "text": [
       "Train set:   200\n",
+      "Train set:   0.6666666666666666%\n",
+      "Descriptors: 15\n",
+      "Test set:   100\n",
+      "Test set:   0.3333333333333333%\n",
       "Descriptors: 15\n"
      ]
     }
@@ -128,7 +132,11 @@
     "y = pd.read_excel(\"./Data/data_dummies.xlsx\", index_col=0, sheet_name=2)\n",
     "X_train, X_test, y_train, y_test = split_x_to_n(X, y, sort=True)\n",
     "print(f\"Train set:   {len(X_train.index)}\")\n",
-    "print(f\"Descriptors: {len(X_train.columns)}\")"
+    "print(f\"Train set:   {len(X_train.index)/(len(X_train.index)+len(X_test.index))}%\")\n",
+    "print(f\"Descriptors: {len(X_train.columns)}\")\n",
+    "print(f\"Test set:   {len(X_test.index)}\")\n",
+    "print(f\"Test set:   {len(X_test.index)/(len(X_train.index)+len(X_test.index))}%\")\n",
+    "print(f\"Descriptors: {len(X_test.columns)}\")"
    ]
   },
   {
