--- a/Misvik_Bayeas_model/MISVIK_Finish/Models_Bayes_withoutCore_predOnTest.ipynb
+++ b/Misvik_Bayeas_model/MISVIK_Finish/Models_Bayes_withoutCore_predOnTest.ipynb
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a278c9f8",
+   "id": "953e7596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,17 +388,7 @@
    "source": [
     "obs = pd.read_excel(\"Data/OX/beas_data.xlsx\", index_col=0)\n",
     "table = compare(obs, beas.predict_on_test)\n",
-    "# table\n",
-    "\n",
-    "\n",
-    "obs = pd.read_excel(\"Data/OX/beas_data.xlsx\", index_col=0)\n",
-    "obs = np.array(observe2(obs))\n",
-    "\n",
-    "\n",
-    "pred = np.array(beas.predict_on_test)\n",
-    "pred = np.where(pred == \"Toxic\", 1, 0).flatten()\n",
-    "print(obs)\n",
-    "print(pred)"
+    "table"
    ]
   },
   {
